(1) reverted paramMat and paramStringFile to previous grid (smallest pulse 200mV/20uA). (2) changed ISO7341->ISO7741, AD8276->AMP03, C10,36 680nF->1uF, requiring changes in BOM, schematic, schematic.pdf, layout. (3) updated changelog. (4) updated datasheets as in (2), renamed several datasheets. (5) updated c++ library to run SPIs at 30 and 10 MHz instead of 10 and 5 (DAC and ADC, respectively). (6) updated timing in stimjimpulser, decreased interrupt priority to 64 (from 24).

--- a/changelog.txt
+++ b/changelog.txt
@@ -34,3 +34,5 @@ Changes in V0.17:
 Changes in V0.18:
 1) Board switched from 2-layer to 4-layer (added ground and power planes).
 2) Added many test points throughout board.
+3) Replaced ISO7341 with ISO7741 to match speed and delay of ISO7760, so SPI can run faster.
+4) Replaced AD8276 with AMP03 for higher bandwidth current stimulation.
